--- a/kadaiB.html
+++ b/kadaiB.html
@@ -18,12 +18,12 @@
       text-align: center;
       line-height: 100px;
     }
-    .win {
+    .dai {
       background: pink;
       border-radius: 50%;
       transform: rotate(360deg);
     }
-    .lose {
+    .tyuu {
       transform: scale(0.9);
     }
   </style>
@@ -34,19 +34,19 @@
     'use strict';
 
     const num = 10;
-    const winner = Math.floor(Math.random() * num); // 0 - 9
+    const daikichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
 
     for (let i = 0; i < num; i++) {
       const div = document.createElement('div'); // bodyにdiv要素を追加
       div.classList.add('box');
       
       div.addEventListener('click', () => {
-        if (i === winner) {
-          div.textContent = 'Win!';
-          div.classList.add('win');
+        if (i === daikichi) {
+          div.textContent = '大吉!';
+          div.classList.add('dai');
         } else {
-          div.textContent = 'Lose!';
-          div.classList.add('lose');
+          div.textContent = '中吉';
+          div.classList.add('tyuu');
         }
       });
 
