--- a/kadaiB.html
+++ b/kadaiB.html
@@ -19,11 +19,16 @@
       line-height: 100px;
     }
     .dai {
-      background: pink;
+      background: red;
       border-radius: 50%;
       transform: rotate(360deg);
     }
     .tyuu {
+      background: pink;
+      transform: scale(0.9);
+    }
+    .syou{
+      background: green;
       transform: scale(0.9);
     }
   </style>
@@ -35,6 +40,7 @@
 
     const num = 10;
     const daikichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
+    const tyuukichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
 
     for (let i = 0; i < num; i++) {
       const div = document.createElement('div'); // bodyにdiv要素を追加
@@ -44,9 +50,12 @@
         if (i === daikichi) {
           div.textContent = '大吉!';
           div.classList.add('dai');
-        } else {
+        } else if ( i === tyuukichi){
           div.textContent = '中吉';
           div.classList.add('tyuu');
+        } else {
+          div.textContent = '小吉';
+          div.classList.add('syou');
         }
       });
 
