--- a/kadaiB.html
+++ b/kadaiB.html
@@ -25,10 +25,17 @@
     }
     .tyuu {
       background: pink;
+      border-radius: 40%;
       transform: scale(0.9);
     }
     .syou{
       background: green;
+      border-radius: 30%;
+      transform: scale(0.9);
+    }
+    .kyou{
+      background: blue;
+      border-radius: 20%;
       transform: scale(0.9);
     }
   </style>
@@ -41,6 +48,7 @@
     const num = 10;
     const daikichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
     const tyuukichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
+    const syoukichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
 
     for (let i = 0; i < num; i++) {
       const div = document.createElement('div'); // bodyにdiv要素を追加
@@ -53,9 +61,12 @@
         } else if ( i === tyuukichi){
           div.textContent = '中吉';
           div.classList.add('tyuu');
-        } else {
+        } else if ( i === syoukichi){
           div.textContent = '小吉';
           div.classList.add('syou');
+        } else{
+          div.textContent = '凶';
+          div.classList.add('kyou');
         }
       });
 
