--- a/kadaiB.html
+++ b/kadaiB.html
@@ -48,7 +48,8 @@
     const num = 10;
     const daikichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
     const tyuukichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
-    const syoukichi = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
+    const syoukichi1 = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
+    const syoukichi2 = Math.floor(Math.random() * num); // 0 - 9のランダムな整数値
 
     for (let i = 0; i < num; i++) {
       const div = document.createElement('div'); // bodyにdiv要素を追加
@@ -61,7 +62,7 @@
         } else if ( i === tyuukichi){
           div.textContent = '中吉';
           div.classList.add('tyuu');
-        } else if ( i === syoukichi){
+        } else if ( i === syoukichi1 && i === syoukichi2){
           div.textContent = '小吉';
           div.classList.add('syou');
         } else{
