--- a/kadaiB.html
+++ b/kadaiB.html
@@ -62,7 +62,10 @@
         } else if ( i === tyuukichi){
           div.textContent = '中吉';
           div.classList.add('tyuu');
-        } else if ( i === syoukichi1 && i === syoukichi2){
+        } else if ( i === syoukichi1){
+          div.textContent = '小吉';
+          div.classList.add('syou');
+        } else if ( i === syoukichi2){
           div.textContent = '小吉';
           div.classList.add('syou');
         } else{
